Fix: Testimonial image alignment issue on responsive devices

--- a/src/blocks/testimonial/style.scss
+++ b/src/blocks/testimonial/style.scss
@@ -124,13 +124,13 @@
     justify-content:center;
 }
 @media(max-width:976px) {
-    .uagb-tm__image-position-bottom .uagb-tm__image-content,
-    .uagb-tm__image-position-bottom .uagb-testimonial-details {
+    .uagb-tm__image-position-bottom.uagb-tm-stacked-tablet .uagb-tm__image-content,
+    .uagb-tm__image-position-bottom.uagb-tm-stacked-tablet .uagb-testimonial-details {
         display: block;
         vertical-align: middle;
     }
-    .uagb-tm__image-position-left .uagb-tm__content,
-    .uagb-tm__image-position-right .uagb-tm__content{
+    .uagb-tm__image-position-left.uagb-tm-stacked-tablet .uagb-tm__content,
+    .uagb-tm__image-position-right.uagb-tm-stacked-tablet .uagb-tm__content{
         display: block;
         -js-display: block;
         display: block;
@@ -154,13 +154,13 @@
 }
 
 @media(max-width:768px) {
-    .uagb-tm__image-position-bottom .uagb-tm__image-content,
-    .uagb-tm__image-position-bottom .uagb-testimonial-details {
+    .uagb-tm__image-position-bottom.uagb-tm-stacked-mobile .uagb-tm__image-content,
+    .uagb-tm__image-position-bottom.uagb-tm-stacked-mobile .uagb-testimonial-details {
         display: block;
         vertical-align: middle;
     }
-    .uagb-tm__image-position-left .uagb-tm__content,
-    .uagb-tm__image-position-right .uagb-tm__content{
+    .uagb-tm__image-position-left.uagb-tm-stacked-mobile .uagb-tm__content,
+    .uagb-tm__image-position-right.uagb-tm-stacked-mobile .uagb-tm__content{
         display: block;
         -js-display: block;
         display: block;
